@@ -111,7 +111,7 @@
         <translation>-- Ikke valgt --</translation>
     </message>
     <message>
-        <source>Copy/Cut/Paste is not available in Mozilla and Firefox.<byte value="xd"/>
+        <source>Copy/Cut/Paste is not available in Mozilla and Firefox.
 Do you want more information about this issue?</source>
         <translation>Kopier/Klipp ut/Lim inn er ikke tilgjengelig i Mozilla og Firefox.
 Vil du vite mer om dette?</translation>
