@@ -9,7 +9,9 @@ eZ Online Editor MCE extension Changelog
 * Added bookmarks tab in upload dialog
 * Stop tinyMCE from triyng to load i18n script a second time (unvanted 404).
 * Fixed: Extra paragraphs in literal tags if double line feeds where used.
-* Updated TInyMCE to 3.1.1 (trunk), fixes serveral issues in Opera
+* Updated TinyMCE to 3.1.1 (trunk), fixes serveral issues in Opera
+* Fixed bug #013011: Opera doesn't allow to make embedded object as link
+* Added Norwegian translation
 
 
 5.0Beta4
